--- a/views/bachas.ejs
+++ b/views/bachas.ejs
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
-<html lang="es">
+<!doctype html>
+<html class="no-js" lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/stylesheets/css/registro.css">
-    <title>Carga de producto</title>
-    <link rel="icon" type="image/jpg" href="img/waseer.jfif">
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;1,200&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>WASSER AR/Bachas</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="shortcut icon" type="image/x-icon" href="stylesheets/img/favicon.ico">
+
+
 	<link rel="stylesheet" href="stylesheets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="stylesheets/css/owl.carousel.min.css">
 	<link rel="stylesheet" href="stylesheets/css/slicknav.css">
@@ -109,8 +111,8 @@
                                                    </li> 
                                                 
                                                    <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
-                                                <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a  href="""><i  class="fas fa-phone"></i></a></li>
+                                                <li><a href="/error"><i class="fab fa-facebook-f"></i></a></li>
+                                                <li><a  href="/error"><i  class="fas fa-phone"></i></a></li>
                                               
 
                                                 
@@ -139,7 +141,7 @@
         </div>
         <!-- Header End -->
     </header>
-    <main>
+    
 
                             
     <!-- search model begin -->
@@ -187,14 +189,12 @@
       <div class="container">    
         <div class="row">
           <div class="col-sm-12">
-            <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+            <div class="panel-body"><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
           </div>
         </div>
       </div>
 
      
-          <!-- Search model end -->   
-    <!-- Scroll Up -->
     <div id="back-top" >
         <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
     </div>
@@ -232,6 +232,8 @@
               <div class="panel-footer">.</div>
             </div>
           </div>
+        </div>
+      </div><br><br>
           
        
         </div>
@@ -334,8 +336,8 @@
                   <ul class="footer_list">
                     <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
                     <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
-                    <li><a href="/">FAQ</a></li>
-                    <li><a href="/">Nuestras Oficinas</a></li>
+                    <li><a href="/error">FAQ</a></li>
+                    <li><a href="/error">Nuestras Oficinas</a></li>
   
                   </ul>
                  
@@ -355,7 +357,7 @@
         </div>
   </footer>
                               
-                       
+            
                           
   <!-- search model begin -->
   <div class="search-model-box" style="display: none;">
