--- a/views/banieras.ejs
+++ b/views/banieras.ejs
@@ -1,11 +1,13 @@
 <!doctype html>
-<html class="no-js" lang="es">
+<html class="no-js" lang="ES">
 <head>
-    <meta charset="utf-8">   
-    <title>WASSER AR</title>
-    <meta name="Bañeras y Duchas" content="">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>WASSER AR/Bañeras...</title>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="shortcut icon" type="image/x-icon" href="stylesheets/img/favicon.ico">
       
     
 
@@ -110,8 +112,8 @@
                                                    </li> 
                                                 
                                                    <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
-                                                <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a  href="""><i  class="fas fa-phone"></i></a></li>
+                                                <li><a href="/error"><i class="fab fa-facebook-f"></i></a></li>
+                                                <li><a  href="/error"><i  class="fas fa-phone"></i></a></li>
                                               
 
                                                 
@@ -310,9 +312,9 @@
               <div class="panel-footer">.</div>
             </div>
           </div>
-        </div>
-      </div><br>
-     -->
+        </div>-->
+      </div>
+     
    
     
     <!-- JS here -->
@@ -336,25 +338,23 @@
                   <ul class="footer_list">
                     <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
                     <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
-                    <li><a href="/">FAQ</a></li>
-                    <li><a href="/">Nuestras Oficinas</a></li>
+                    <li><a href="/error">FAQ</a></li>
+                    <li><a href="/error">Nuestras Oficinas</a></li>
   
                   </ul>
                  
                 </div> 
-                <br>
+                
                 <h2>Subscribite para recibir las mejores ofertas!</h2>
                 <div class="hero-cta__input"> <input type="email" name="data[email]" required="" id="hero-cta-email" placeholder="Ingrese su Email aqui"></div> <button type="submit" class="emailsignup">Subscribirme</button></div>
-                <br>
-                <br>
-  
+             
                 
   
   
             </div>
-            <br>
+          
           </div>
-          <br>
+         
         </div>
 
       </footer>
