--- a/views/carrito.ejs
+++ b/views/carrito.ejs
@@ -1,11 +1,15 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿<!doctype html>
+<html class="no-js" lang="ES">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Carrito</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>WASSER AR/carrito</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="shortcut icon" type="image/x-icon" href="stylesheets/img/favicon.ico">
+
+
     <link rel="stylesheet" href="stylesheets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="stylesheets/css/owl.carousel.min.css">
 	<link rel="stylesheet" href="stylesheets/css/slicknav.css">
@@ -75,12 +79,12 @@
                                                
                                                 <li><a href="/categoria">Categorias</a>
                                                     <ul class="submenu">
-                                                      <li><a href="">Griferia Baño</a></li>
-                                                      <li><a href="">Griferia Cocina</a></li>
-                                                      <li><a href="">Bachas</a></li>
-                                                      <li><a href="">Sanitarios</a></li>
-                                                      <li><a href="">Bañeras y Duchas</a></li>
-                                                      <li><a href="">Accesorios varios</a></li>
+                                                      <li><a href="/catebanio">Griferia Baño</a></li>
+                                                      <li><a href="/catecocina">Griferia Cocina</a></li>
+                                                      <li><a href="/bachas">Bachas</a></li>
+                                                      <li><a href="/sanitarios">Sanitarios</a></li>
+                                                      <li><a href="/banieras">Bañeras y Duchas</a></li>
+                                                      <li><a href="/accesorios">Accesorios varios</a></li>
                                                       <li><a href="/categoria">ver todas</a></li>
                                                     </ul>
                                                 </li>
@@ -103,8 +107,8 @@
                                                    </li> 
                                                 
                                                    <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
-                                                <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a  href="""><i  class="fas fa-phone"></i></a></li>
+                                                <li><a href="/error"><i class="fab fa-facebook-f"></i></a></li>
+                                                <li><a  href="/error"><i  class="fas fa-phone"></i></a></li>
                                               
 
                                                 
@@ -190,7 +194,7 @@
         
         <div class="input-group-append">
           
-          <button type="submit" class="btn btn-secondary">ENVIAR</button>
+          <button type="submit" class="btn2 btn-secondary">ENVIAR</button>
         </div>
       </div>
     </form>
@@ -346,7 +350,7 @@
         </div>
       </div>
       <hr class="mb-4">
-      <button class="btn btn-primary btn-lg btn-block" type="submit">Finalizar Compra</button>
+      <button class="btn2 btn-primary btn-lg btn-block" type="submit">Finalizar Compra</button>
     </form>
   </div>
 </div>
@@ -369,8 +373,8 @@
               <ul class="footer_list">
                 <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
                 <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
-                <li><a href="/">FAQ</a></li>
-                <li><a href="/">Nuestras Oficinas</a></li>
+                <li><a href="/error">FAQ</a></li>
+                <li><a href="/error">Nuestras Oficinas</a></li>
 
               </ul>
              
