--- a/views/categoria.ejs
+++ b/views/categoria.ejs
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="ES">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>WASSER AR</title>
+    <title>WASSER AR/categorias</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -110,8 +110,8 @@
                                                    </li> 
                                                 
                                                    <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
-                                                <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a  href="""><i  class="fas fa-phone"></i></a></li>
+                                                <li><a href="/error"><i class="fab fa-facebook-f"></i></a></li>
+                                                <li><a  href="/error"><i  class="fas fa-phone"></i></a></li>
                                               
 
                                                 
@@ -142,15 +142,7 @@
     </header>
     <main>
 
-      <!--espacio en blaco con sombra-->
-
-      <div class="container">    
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          </div>
-        </div>
-      </div>
+      
 
       <div class="container">    
         <div class="row">
@@ -182,7 +174,7 @@
           <div class="container">    
             <div class="row">
               <div class="col-sm-12">
-                <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+                <div class="panel-body"><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></div>
               </div>
             </div>
           </div>
@@ -260,8 +252,8 @@
         </div>
       
      
-
-      </div><br><br>
+      </div>
+      </div>
 
    
     
@@ -286,25 +278,24 @@
                   <ul class="footer_list">
                     <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
                     <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
-                    <li><a href="/">FAQ</a></li>
-                    <li><a href="/">Nuestras Oficinas</a></li>
+                    <li><a href="/error">FAQ</a></li>
+                    <li><a href="/error">Nuestras Oficinas</a></li>
   
                   </ul>
                  
                 </div> 
-                <br>
+               
                 <h2>Subscribite para recibir las mejores ofertas!</h2>
                 <div class="hero-cta__input"> <input type="email" name="data[email]" required="" id="hero-cta-email" placeholder="Ingrese su Email aqui"></div> <button type="submit" class="emailsignup">Subscribirme</button></div>
-                <br>
-                <br>
-  
+              
                 
   
   
             </div>
-            <br>
+            
           </div>
-        </div>
+         
+              </div>
   </footer>
   
 <!-- search model begin -->
