--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,13 @@
 <!doctype html>
-<html class="no-js" lang="es">
+<html class="no-js" lang="ES">
 <head>
-    <meta charset="utf-8">   
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>WASSER AR</title>
-    <meta name="wasser" content="">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="shortcut icon" type="image/x-icon" href="stylesheets/img/favicon.ico">
 	<!-- CSS here -->
 	<link rel="stylesheet" href="stylesheets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="stylesheets/css/owl.carousel.min.css">
@@ -100,13 +102,13 @@
                                                     </li>
                                                     <!-- Search Box -->                            
                                                     <li class="search-switch">
-                                                       <a ><i class="fas fa-search" > </i></a></li>
+                                                       <a><i class="fas fa-search" > </i></a></li>
                                                
                                                    </li> 
                                                 
                                                    <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
-                                                <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a  href="/sobrenosotros"><i  class="fas fa-phone"></i></a></li>
+                                                <li><a href="/error"><i class="fab fa-facebook-f"></i></a></li>
+                                                <li><a  href="/error"><i  class="fas fa-phone"></i></a></li>
                                               
 
                                                 
@@ -149,8 +151,8 @@
                                     <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>compra!</span></h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s">Encontra lo que buscas entre miles de productos nuevos y usados!</p>
                                     
-                                    <a href="/registro" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Registrate!</a>
-
+                                    <a href="/registro" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Registrate!</a><br>
+                                    <p2>Desliza hacia la izquierda...</p2>
                                    
                                 </div>
                             </div>
@@ -165,7 +167,8 @@
                                 <div class="hero__caption">
                                     <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>Publica y vende!</span></h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s">Publica y vende tus productos de griferia nuevos o usados!</p>
-                                    <a href="/carga" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Publica!<i class="ti-arrow-right"></i></a>
+                                    <a href="/carga" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Publica!<i class="ti-arrow-right"></i></a><br>
+                                    <p2>Desliza hacia la izquierda...</p2>
                                 </div>
                             </div>
                         </div>
@@ -241,8 +244,8 @@
                     <ul class="footer_list">
                       <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
                       <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
-                      <li><a href="/">FAQ</a></li>
-                      <li><a href="/">Nuestras Oficinas</a></li>
+                      <li><a href="/error">FAQ</a></li>
+                      <li><a href="/error">Nuestras Oficinas</a></li>
     
                     </ul>
                    
