--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="ES">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -84,7 +84,7 @@
                                              
                                               <li><a href="/categoria">Categorias</a>
                                                   <ul class="submenu">
-                                                    <li><a href="/catebaño">Griferia Baño</a></li>
+                                                    <li><a href="/catebanio">Griferia Baño</a></li>
                                                     <li><a href="/catecocina">Griferia Cocina</a></li>
                                                     <li><a href="/bachas">Bachas</a></li>
                                                     <li><a href="/sanitarios">Sanitarios</a></li>
@@ -112,8 +112,8 @@
                                                  </li> 
                                               
                                                  <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
-                                              <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                                              <li><a  href="""><i  class="fas fa-phone"></i></a></li>
+                                              <li><a href="/error"><i class="fab fa-facebook-f"></i></a></li>
+                                              <li><a  href="/error"><i  class="fas fa-phone"></i></a></li>
                                             
 
                                               
@@ -199,7 +199,7 @@
         <div class="container">    
           <div class="row">
             <div class="col-sm-12">
-              <a class="btn btn-primary" href="/">Añadir al carrito</a>
+              <a class="btn2 btn-primary" href="/carrito">Añadir al carrito</a>
             </div>
           </div>
         </div>
@@ -299,8 +299,8 @@
                     <ul class="footer_list">
                       <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
                       <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
-                      <li><a href="/">FAQ</a></li>
-                      <li><a href="/">Nuestras Oficinas</a></li>
+                      <li><a href="/error">FAQ</a></li>
+                      <li><a href="/error">Nuestras Oficinas</a></li>
     
                     </ul>
                    
