--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
-<html lang="es">
+<!doctype html>
+<html class="no-js" lang="zxx">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/stylesheets/css/registro.css">
-    <title>Registrate en Wasser</title>
-    <link rel="icon" type="image/jpg" href="img/waseer.jfif">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>WASSER AR/Accesorios</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="shortcut icon" type="image/x-icon" href="stylesheets/img/favicon.ico">
+
+        <link rel="stylesheet" href="/stylesheets/css/registro.css">
+   
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;1,200&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="stylesheets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="stylesheets/css/owl.carousel.min.css">
@@ -79,12 +83,12 @@
                                                
                                                 <li><a href="/categoria">Categorias</a>
                                                     <ul class="submenu">
-                                                        <li><a href="">Griferia Baño</a></li>
-                                                        <li><a href="">Griferia Cocina</a></li>
-                                                        <li><a href="">Bachas</a></li>
-                                                        <li><a href="">Sanitarios</a></li>
-                                                        <li><a href="">Bañeras y Duchas</a></li>
-                                                        <li><a href="">Accesorios varios</a></li>
+                                                        <li><a href="/catebanio">Griferia Baño</a></li>
+                                                        <li><a href="/catecocina">Griferia Cocina</a></li>
+                                                        <li><a href="/bachas">Bachas</a></li>
+                                                        <li><a href="/sanitarios">Sanitarios</a></li>
+                                                        <li><a href="banieras">Bañeras y Duchas</a></li>
+                                                        <li><a href="accesorios">Accesorios varios</a></li>
                                                         <li><a href="/categoria">ver todas</a></li>
                                                     </ul>
                                                 </li>
@@ -107,8 +111,8 @@
                                                    </li> 
                                                 
                                                    <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
-                                                <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a  href="""><i  class="fas fa-phone"></i></a></li>
+                                                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                                                <li><a  href="/error><i  class="fas fa-phone"></i></a></li>
                                               
 
                                                 
@@ -151,13 +155,11 @@
         <input class="controlls2" type="password" name="contraseña" id="contraseña" placeholder="Repita su Contraseña" required>   
          <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
          <input class="botons" type="submit" value="Registrar">
-         <p><a href="iniciarsesion.html">¿Ya tenes cuenta?</a></p>
+         <p><a href="/iniciarsesion">¿Ya tenes cuenta?</a></p>
         
     </section>
 <!-- Scroll Up -->
-<div id="back-top" >
-    <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
-</div>
+<
 <footer>
     <div class="container">    
         <div class="row">
@@ -177,27 +179,29 @@
                 <ul class="footer_list">
                   <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
                   <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
-                  <li><a href="/">FAQ</a></li>
-                  <li><a href="/">Nuestras Oficinas</a></li>
+                  <li><a href="/error">FAQ</a></li>
+                  <li><a href="/error">Nuestras Oficinas</a></li>
 
                 </ul>
                
               </div> 
-              <br>
+              
               <h2>Subscribite para recibir las mejores ofertas!</h2>
               <div class="hero-cta__input"> <input type="email" name="data[email]" required="" id="hero-cta-email" placeholder="Ingrese su Email aqui"></div> <button type="submit" class="emailsignup">Subscribirme</button></div>
-              <br>
-              <br>
+          
 
               
 
 
           </div>
-          <br>
+          
         </div>
       </div>
 </footer>
 <!-- JS here -->
+<div id="back-top" >
+    <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
+</div>
 
 <script src="stylesheets/js/vendor/modernizr-3.5.0.min.js"></script>
 <!-- Jquery, Popper, Bootstrap -->
