--- a/views/sobrenosotros.ejs
+++ b/views/sobrenosotros.ejs
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="ES">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>WASSER AR</title>
+    <title>WASSER AR/About us</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -108,8 +108,8 @@
                                                    </li> 
                                                 
                                                    <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
-                                                <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a  href="""><i  class="fas fa-phone"></i></a></li>
+                                                <li><a href="/error"><i class="fab fa-facebook-f"></i></a></li>
+                                                <li><a  href="/error"><i  class="fas fa-phone"></i></a></li>
                                               
 
                                                 
@@ -226,8 +226,8 @@
                     <ul class="footer_list">
                       <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
                       <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
-                      <li><a href="/">FAQ</a></li>
-                      <li><a href="/">Nuestras Oficinas</a></li>
+                      <li><a href="/error">FAQ</a></li>
+                      <li><a href="/error">Nuestras Oficinas</a></li>
     
                     </ul>
                    
