--- a/views/carga.ejs
+++ b/views/carga.ejs
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<html lang="es">
+<!doctype html>
+<html class="no-js" lang="ES">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>WASSER AR/publica!</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="shortcut icon" type="image/x-icon" href="stylesheets/img/favicon.ico">
+
     <link rel="stylesheet" href="/stylesheets/css/registro.css">
-    <title>Carga de producto</title>
-    <link rel="icon" type="image/jpg" href="img/waseer.jfif">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;1,200&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="stylesheets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="stylesheets/css/owl.carousel.min.css">
@@ -107,8 +110,8 @@
                                                    </li> 
                                                 
                                                    <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
-                                                <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a  href="""><i  class="fas fa-phone"></i></a></li>
+                                                <li><a href="/error"><i class="fab fa-facebook-f"></i></a></li>
+                                                <li><a  href="/error"><i  class="fas fa-phone"></i></a></li>
                                               
 
                                                 
@@ -206,8 +209,8 @@
                     <ul class="footer_list">
                       <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
                       <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
-                      <li><a href="/">FAQ</a></li>
-                      <li><a href="/">Nuestras Oficinas</a></li>
+                      <li><a href="/error">FAQ</a></li>
+                      <li><a href="/error">Nuestras Oficinas</a></li>
     
                     </ul>
                    
