--- a/views/catebanio.ejs
+++ b/views/catebanio.ejs
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="ES">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>WASSER AR</title>
+    <title>WASSER AR/Griferia para Baños</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -110,8 +110,8 @@
                                                    </li> 
                                                 
                                                    <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
-                                                <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a  href="""><i  class="fas fa-phone"></i></a></li>
+                                                <li><a href="/error"><i class="fab fa-facebook-f"></i></a></li>
+                                                <li><a  href="/error"><i  class="fas fa-phone"></i></a></li>
                                               
 
                                                 
@@ -185,17 +185,19 @@
       <div class="container">    
         <div class="row">
           <div class="col-sm-12">
-            <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+            <div class="panel-body"><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></div>
           </div>
         </div>
       </div>
 
      
-          <!-- Search model end -->   
+          
     <!-- Scroll Up -->
     <div id="back-top" >
         <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
     </div>
+
+    
     <div class="container">    
         <div class="row">
           <div class="col-sm-3">
@@ -233,7 +235,9 @@
           
        
         </div>
-      </div><br>
+      </div>
+    </div>
+  </div>
 <!-- otros productos a agregar
       <div class="container">    
         <div class="row">
@@ -307,9 +311,10 @@
             </div>
           </div>
         </div>
+      
       </div><br>
-     -->
-   
+       -->
+    
     
     <!-- JS here -->
 
@@ -319,9 +324,9 @@
             <div class="col-sm-12">
               
               <div class="footer">
-                  <br>
+                  
                   <h2>Wasser, ¡los mejores precios encontralos aqui!</h2>
-                  <br>
+                  
   
               
                   
@@ -332,26 +337,27 @@
                   <ul class="footer_list">
                     <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
                     <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
-                    <li><a href="/">FAQ</a></li>
-                    <li><a href="/">Nuestras Oficinas</a></li>
+                    <li><a href="/error">FAQ</a></li>
+                    <li><a href="/error">Nuestras Oficinas</a></li>
   
                   </ul>
                  
                 </div> 
-                <br>
+                
                 <h2>Subscribite para recibir las mejores ofertas!</h2>
                 <div class="hero-cta__input"> <input type="email" name="data[email]" required="" id="hero-cta-email" placeholder="Ingrese su Email aqui"></div> <button type="submit" class="emailsignup">Subscribirme</button></div>
-                <br>
-                <br>
-  
+                
                 
   
   
             </div>
-            <br>
+            
           </div>
         </div>
+      </div>
   </footer>
+  
+                        
   
 <!-- search model begin -->
 <div class="search-model-box" style="display: none;">
@@ -361,7 +367,8 @@
 <input type="text" id="search-input" placeholder="Qué buscas?">
 </form>
 </div>
-</div>              
+</div>     
+         
 <!-- Search model end -->   
 <!-- Scroll Up -->
 <div id="back-top" >
