--- a/views/sanitarios.ejs
+++ b/views/sanitarios.ejs
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="ES">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>WASSER AR</title>
+    <title>WASSER AR/Sanitarios</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -110,8 +110,8 @@
                                                    </li> 
                                                 
                                                    <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
-                                                <li><a href="facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a  href="""><i  class="fas fa-phone"></i></a></li>
+                                                <li><a href="/error"><i class="fab fa-facebook-f"></i></a></li>
+                                                <li><a  href="/error"><i  class="fas fa-phone"></i></a></li>
                                                 </ul>
                                             
                                         </nav>
@@ -144,7 +144,6 @@
             </form>
         </div>
     </div>              
-    <!--espacio en blaco con sombra-->
 
 
 
@@ -180,7 +179,7 @@
       <div class="container">    
         <div class="row">
           <div class="col-sm-12">
-            <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+            <div class="panel-body"><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></div>
           </div>
         </div>
       </div>
@@ -301,17 +300,52 @@
               <div class="panel-footer">.</div>
             </div>
           </div>
-        </div>
-      </div><br>
-     -->
+        </div>    -->
+      </div>
+ 
    
     
     <!-- JS here -->
 
     <footer>
-      <p>Copyright ©2020 <a href="">WASSER</a> | Made by <a href="https://www.instagram.com/sibeeriano/">Facundo Vara</a> - <a href="https://www.instagram.com/leandrobuco/">Leandro Bucco</a> - <a href="https://www.instagram.com/leandrouriell/">Uriel Turrion</a> | <a href="">Termino y condiciones</a> </p>
-  </div>
-</footer>
+      <div class="container">    
+          <div class="row">
+            <div class="col-sm-12">
+              
+              <div class="footer">
+                  <br>
+                  <h2>Wasser, ¡los mejores precios encontralos aqui!</h2>
+                  <br>
+  
+              
+                  
+              </div>
+  
+              <div class="footer">
+                  <h4>Saber mas</h4>
+                  <ul class="footer_list">
+                    <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
+                    <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
+                    <li><a href="/error">FAQ</a></li>
+                    <li><a href="/error">Nuestras Oficinas</a></li>
+  
+                  </ul>
+                 
+                </div> 
+                <br>
+                <h2>Subscribite para recibir las mejores ofertas!</h2>
+                <div class="hero-cta__input"> <input type="email" name="data[email]" required="" id="hero-cta-email" placeholder="Ingrese su Email aqui"></div> <button type="submit" class="emailsignup">Subscribirme</button></div>
+                <br>
+                <br>
+  
+                
+  
+  
+            </div>
+            <br>
+          </div>
+        </div>
+  </footer>
   
 <!-- search model begin -->
 <div class="search-model-box" style="display: none;">
