--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>OPPS!</title>
+    <title>OOPS!</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -18,8 +18,8 @@
         <ul id="navigation">    
                                                                                                                                      
             <li>
-                <p2>Opps! Algo salio mal! El equipo de Wasser esta trabajando duro para solucionarlo! </p2>
-                <a href="/">volver a home</a></li>
+                <p2>Oops! Algo salio mal! El equipo de Wasser esta trabajando duro para solucionarlo! </p2>
+                <a href="/">volver a WASSER</a></li>
         </ul>
         
 
