Agregada la carpeta controllers, en controllers los renders y junte las rutas por categorias

--- a/views/catebanio.ejs
+++ b/views/catebanio.ejs
@@ -315,18 +315,19 @@
       </div><br>
        -->
     
-    
+    </main>
+
     <!-- JS here -->
 
     <footer>
       <div class="container">    
           <div class="row">
-            <div class="col-sm-12">
+            <div class="col-md-12">
               
               <div class="footer">
-                  
+                  <br>
                   <h2>Wasser, ¡los mejores precios encontralos aqui!</h2>
-                  
+                  <br>
   
               
                   
@@ -343,70 +344,68 @@
                   </ul>
                  
                 </div> 
-                
+                <br>
                 <h2>Subscribite para recibir las mejores ofertas!</h2>
                 <div class="hero-cta__input"> <input type="email" name="data[email]" required="" id="hero-cta-email" placeholder="Ingrese su Email aqui"></div> <button type="submit" class="emailsignup">Subscribirme</button></div>
                 
+  
                 
   
   
-            </div>
-            
+            </div>           
           </div>
         </div>
-      </div>
   </footer>
+                              
+                       
+                          
+  <!-- search model begin -->
+  <div class="search-model-box" style="display: none;">
+      <div class="h-100 d-flex align-items-center justify-content-center">
+          <div class="search-close-btn">+</div>
+          <form class="search-model-form">
+              <input type="text" id="search-input" placeholder="Qué buscas?">
+          </form>
+      </div>
+  </div>              
+   <!-- Search model end -->   
+  <!-- Scroll Up -->
+  <div id="back-top" >
+      <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
+  </div>
+
+  <!-- JS here -->
+
+  <script src="stylesheets/js/vendor/modernizr-3.5.0.min.js"></script>
+  <!-- Jquery, Popper, Bootstrap -->
+  <script src="stylesheets/js/vendor/jquery-1.12.4.min.js"></script>
+  <script src="stylesheets/js/popper.min.js"></script>
+  <script src="stylesheets/js/bootstrap.min.js"></script>
+  <!-- Jquery Mobile Menu -->
+  <script src="stylesheets/js/jquery.slicknav.min.js"></script>
+
+  <!-- Jquery Slick , Owl-Carousel Plugins -->
+  <script src="stylesheets/js/owl.carousel.min.js"></script>
+  <script src="stylesheets/js/slick.min.js"></script>
+  <!-- One Page, Animated-HeadLin -->
+  <script src="stylesheets/js/wow.min.js"></script>
+  <script src="stylesheets/js/animated.headline.js"></script>
+  <script src="stylesheets/js/jquery.magnific-popup.js"></script>
+
   
-                        
   
-<!-- search model begin -->
-<div class="search-model-box" style="display: none;">
-<div class="h-100 d-flex align-items-center justify-content-center">
-<div class="search-close-btn">+</div>
-<form class="search-model-form">
-<input type="text" id="search-input" placeholder="Qué buscas?">
-</form>
-</div>
-</div>     
-         
-<!-- Search model end -->   
-<!-- Scroll Up -->
-<div id="back-top" >
-<a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
-</div>
-
-<!-- JS here -->
-
-<script src="stylesheets/js/vendor/modernizr-3.5.0.min.js"></script>
-<!-- Jquery, Popper, Bootstrap -->
-<script src="stylesheets/js/vendor/jquery-1.12.4.min.js"></script>
-<script src="stylesheets/js/popper.min.js"></script>
-<script src="stylesheets/js/bootstrap.min.js"></script>
-<!-- Jquery Mobile Menu -->
-<script src="stylesheets/js/jquery.slicknav.min.js"></script>
-
-<!-- Jquery Slick , Owl-Carousel Plugins -->
-<script src="stylesheets/js/owl.carousel.min.js"></script>
-<script src="stylesheets/js/slick.min.js"></script>
-<!-- One Page, Animated-HeadLin -->
-<script src="stylesheets/js/wow.min.js"></script>
-<script src="stylesheets/js/animated.headline.js"></script>
-<script src="stylesheets/js/jquery.magnific-popup.js"></script>
+  <!-- counter , waypoint,Hover Direction -->
+  <script src="stylesheets/js/jquery.counterup.min.js"></script>
+  <script src="stylesheets/js/waypoints.min.js"></script>
+  <script src="stylesheets/js/jquery.countdown.min.js"></script>
+  <script src="stylesheets/js/hover-direction-snake.min.js"></script>
 
 
+  
+  <!-- Jquery Plugins, main Jquery -->	
+  <script src="stylesheets/js/plugins.js"></script>
+  <script src="stylesheets/js/main.js"></script>
 
-<!-- counter , waypoint,Hover Direction -->
-<script src="stylesheets/js/jquery.counterup.min.js"></script>
-<script src="stylesheets/js/waypoints.min.js"></script>
-<script src="stylesheets/js/jquery.countdown.min.js"></script>
-<script src="stylesheets/js/hover-direction-snake.min.js"></script>
-
-
-
-<!-- Jquery Plugins, main Jquery -->	
-<script src="stylesheets/js/plugins.js"></script>
-<script src="stylesheets/js/main.js"></script>
-
-
-</body>
+  
+  </body>
 </html>
